# product-spec-linter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backends/: __init__.py  anthropic_backend.py  ollama.py  openai_backend.py  openrouter_backend.py
connectors/: jira_connector.py
core/: linter.py  report.py
core/rules/: __init__.py  ambiguity.py  completeness.py  contradiction.py  dependency_gap.py  missing_ac.py
examples/: sample_prd.md
interfaces/: app.py  cli.py  mcp_server.py
interfaces/vscode/: extension_guide.md
tests/: TEST_README  conftest.py  test_linter.py
