[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-spec-linter"
version = "1.0.0"
description = "Catch ambiguity, missing acceptance criteria, and contradictions in your PRDs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Product Spec Linter Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
cloud = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
mcp = [
    "mcp>=0.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "mcp>=0.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
prd-lint = "interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/product-spec-linter"
Issues = "https://github.com/yourusername/product-spec-linter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backends*", "connectors*", "core*", "interfaces*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
